hphp/hack/test/typecheck/dynamic_calls/dynamic_static_method.php.exp
ERROR: File "dynamic_static_method.php", line 10, characters 5-20:
Dynamic calls to static methods are banned. (Parsing[1002])
